docs/4.x/rolesanywhere_trust_anchor.md
---
permalink: /rolesanywhere_trust_anchor/
---

# rolesanywhere_trust_anchor

`rolesanywhere_trust_anchor` represents the `aws_rolesanywhere_trust_anchor` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withEnabled()`](#fn-withenabled)
* [`fn withName()`](#fn-withname)
* [`fn withSource()`](#fn-withsource)
* [`fn withSourceMixin()`](#fn-withsourcemixin)
* [`fn withTags()`](#fn-withtags)
* [`fn withTagsAll()`](#fn-withtagsall)
* [`obj source`](#obj-source)
  * [`fn new()`](#fn-sourcenew)
  * [`obj source.source_data`](#obj-sourcesource_data)
    * [`fn new()`](#fn-sourcesource_datanew)

## Fields

### fn new

```ts
new()
```


`aws.rolesanywhere_trust_anchor.new` injects a new `aws_rolesanywhere_trust_anchor` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.rolesanywhere_trust_anchor.new('some_id')

You can get the reference to the `id` field of the created `aws.rolesanywhere_trust_anchor` using the reference:

    $._ref.aws_rolesanywhere_trust_anchor.some_id.get('id')

This is the same as directly entering `"${ aws_rolesanywhere_trust_anchor.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `enabled` (`bool`):  When `null`, the `enabled` field will be omitted from the resulting object.
  - `name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.
  - `source` (`list[obj]`):  When `null`, the `source` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.rolesanywhere_trust_anchor.source.new](#fn-rolesanywheretrustanchorsourcenew) constructor.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.rolesanywhere_trust_anchor.newAttrs` constructs a new object with attributes and blocks configured for the `rolesanywhere_trust_anchor`
Terraform resource.

Unlike [aws.rolesanywhere_trust_anchor.new](#fn-rolesanywheretrustanchornew), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `enabled` (`bool`):  When `null`, the `enabled` field will be omitted from the resulting object.
  - `name` (`string`): 
  - `tags` (`obj`):  When `null`, the `tags` field will be omitted from the resulting object.
  - `tags_all` (`obj`):  When `null`, the `tags_all` field will be omitted from the resulting object.
  - `source` (`list[obj]`):  When `null`, the `source` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.rolesanywhere_trust_anchor.source.new](#fn-rolesanywheretrustanchorsourcenew) constructor.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `rolesanywhere_trust_anchor` resource into the root Terraform configuration.


### fn withEnabled

```ts
withEnabled()
```

`aws.rolesanywhere_trust_anchor.withEnabled` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the enabled field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `enabled` field.


### fn withName

```ts
withName()
```

`aws.rolesanywhere_trust_anchor.withName` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `name` field.


### fn withSource

```ts
withSource()
```

`aws.rolesanywhere_trust_anchor.withSource` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the source field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `source` field.


### fn withSourceMixin

```ts
withSourceMixin()
```

`aws.rolesanywhere_trust_anchor.withSourceMixin` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the source field.

This function will append the passed in array or object to the existing array. If you wish
to instead replace the array with the passed in `value`, use the [aws.rolesanywhere_trust_anchor.withSource](TODO)
function.


**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `source` field.


### fn withTags

```ts
withTags()
```

`aws.rolesanywhere_trust_anchor.withTags` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the tags field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags` field.


### fn withTagsAll

```ts
withTagsAll()
```

`aws.rolesanywhere_trust_anchor.withTagsAll` constructs a mixin object that can be merged into the `rolesanywhere_trust_anchor`
Terraform resource block to set or update the tags_all field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`TODO`): The value to set for the `tags_all` field.


## obj source



### fn source.new

```ts
new()
```


`aws.rolesanywhere_trust_anchor.source.new` constructs a new object with attributes and blocks configured for the `source`
Terraform sub block.



**Args**:
  - `source_type` (`string`): 
  - `source_data` (`list[obj]`):  When `null`, the `source_data` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.rolesanywhere_trust_anchor.source.source_data.new](#fn-sourcesourcedatanew) constructor.

**Returns**:
  - An attribute object that represents the `source` sub block.


## obj source.source_data



### fn source.source_data.new

```ts
new()
```


`aws.rolesanywhere_trust_anchor.source.source_data.new` constructs a new object with attributes and blocks configured for the `source_data`
Terraform sub block.



**Args**:
  - `acm_pca_arn` (`string`):  When `null`, the `acm_pca_arn` field will be omitted from the resulting object.
  - `x509_certificate_data` (`string`):  When `null`, the `x509_certificate_data` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that represents the `source_data` sub block.
